--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "rewrites": [
-    { "source": "/thankyou", "destination": "/thankyou.html" }
+  "version": 2,
+  "routes": [
+    { "src": "/diagnostico", "dest": "/diagnostico.html" },
+    { "src": "/diagnostico/", "dest": "/diagnostico.html" },
+    { "src": "/consultoria", "dest": "/consultoria.html" },
+    { "src": "/consultoria/", "dest": "/consultoria.html" },
+    { "src": "/consultoria-premium", "dest": "/consultoria-premium.html" },
+    { "src": "/consultoria-premium/", "dest": "/consultoria-premium.html" },
+    { "src": "/thankyou", "dest": "/thankyou.html" },
+    { "src": "/thankyou/", "dest": "/thankyou.html" },
+    { "src": "/obrigado", "dest": "/thankyou.html" },
+    { "src": "/obrigado/", "dest": "/thankyou.html" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
