--- a/vercel.json
+++ b/vercel.json
@@ -2,32 +2,27 @@
   "version": 2,
   "alias": "automacao.intellih.com.br",
   "routes": [
-    { "src": "/formulario", "dest": "/formulario.html" },
-    { "src": "/formulario/", "dest": "/formulario.html" },
-    { "src": "/thankyou", "dest": "/thankyou.html" },
-    { "src": "/thankyou/", "dest": "/thankyou.html" },
-    { "src": "/obrigado", "dest": "/thankyou.html" },
-    { "src": "/obrigado/", "dest": "/thankyou.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ],
-  "redirects": [
     {
-      "source": "/(.*)",
+      "src": "/(.*)",
       "has": [{ "type": "host", "value": "formulario.intellih.com.br" }],
-      "destination": "https://automacao.intellih.com.br/formulario.html",
-      "permanent": true
+      "dest": "/formulario.html"
     },
     {
-      "source": "/(.*)",
+      "src": "/(.*)",
       "has": [{ "type": "host", "value": "thankyou.intellih.com.br" }],
-      "destination": "https://automacao.intellih.com.br/thankyou.html",
-      "permanent": true
+      "dest": "/thankyou.html"
     },
     {
-      "source": "/(.*)",
-      "has": [{ "type": "host", "value": "www.automacao.intellih.com.br" }],
-      "destination": "https://automacao.intellih.com.br/$1",
-      "permanent": true
+      "src": "/formulario",
+      "dest": "/formulario.html"
+    },
+    {
+      "src": "/thankyou",
+      "dest": "/thankyou.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
