--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "alias": "automacao.intellih.com.br", 
+  "alias": "automacao.intellih.com.br",
+  "routes": [
     {
       "src": "/(.*)",
       "has": [{ "type": "host", "value": "formulario.intellih.com.br" }],
